# Marsana

./: .gitignore  main.py  package-lock.json  pyproject.toml  skills-lock.json
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 007c8164a5f7_merge_heads.py  1c1235063c9f_describe_the_change.py  31bd36451160_fix_all.py  33197c605d26_initial_schema.py  572d8d0bf3e4_add_wishlist_table.py  5f5527e29051_initial_schema.py  a1b2c3d4e5f6_add_shipping_tables.py  a1b2c3d4e5f7_add_customer_support_tables.py  a442ae35c832_fix_all_4.py  b2c3d4e5f6a7_add_shipping_email.py  b2c3d4e5f6a8_seed_notification_templates.py  c3d4e5f6a7b8_add_wishlist_share_token.py  d4e5f6a7b8c9_add_review_helpful_report.py  e5f6a7b8c9d0_add_promotion_tables.py  ed3135457215_fix_all_5.py  f1a2b3c4d5e6_add_return_exchange_requests.py  f6a7b8c9d0e1_add_notification_templates_and_logs.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/database/: session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: database_models.py
backend/app/repositories/: cart_repository.py  catalog_repository.py  customer_support_repository.py  notification_repository.py  profile_repository.py  promotion_repository.py  session_repository.py  user_repository.py  verification_repository.py
backend/app/schemas/: request_response_models.py
backend/app/services/: admin_service.py  business_logic.py  cart_service.py  category_service.py  homepage_service.py  (+7 more)
backend/tests/: conftest.py  test_auth.py  test_checkout.py
(+155 files in other folders)
