[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pyotp>=2.9.0",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "bcrypt>=4.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
